compliting different  types of task

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Fruit Burst</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <html data-theme="cupcake"></html> -->
 </head>
 
 <body>
@@ -45,7 +46,7 @@
                     <li><a>All Fruits</a></li>
                 </ul>
             </div>
-            <div class="gap-10" >
+            <div class="gap-10">
                 <img src="./images/logo.png" alt="">
                 <h1 class="navbar-center">Fruit Burst</h1>
             </div>
@@ -168,74 +169,79 @@
         </section>
 
         <!-- card-->
-        <section class="grid grid-cols-4">
-            <div class="card bg-base-100 m-2 border-2">
-                <figure class="px-10 pt-10">
-                    <img src="/images/fruit6.png" alt="Shoes" class="rounded-sm" />
-                </figure>
-                <div class="card-body items-center text-center">
-                    <h2 class="card-title">12.90$ - 18.85$</h2>
-                    <p>Apples</p>
-                    <div class="rating">
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      </div>
+        <section class="pb-10">
+            <div class="grid grid-flow-col py-12 px-12">
+                <div class="card bg-base-100 m-2 border-2">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit6.png" alt="Apples" class="rounded-sm" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <p>Apples</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p>Details</p>
+                    </div>
                 </div>
-                
-            </div>
-            <div class="card bg-base-100 m-2 border-2">
-                <figure class="px-10 pt-10">
-                    <img src="/images/fruit7.png" alt="Orange" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                    <h2 class="card-title">12.90$ - 18.85$</h2>
-                    <p>Orange</p>
-                    <div class="rating">
-                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked  />
-                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                      </div>
+                <div class="card bg-base-100 m-2 border-2 ">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit7.png" alt="Orange" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <p>Orange</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p>Details</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 m-2 border-2 ">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <p>Red Dragon</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p>Details</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 m-2 border-2">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit9.png" alt="Banana" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <p>Banana</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p>Details</p>
+                    </div>
                 </div>
             </div>
-            <div class="card bg-base-100 m-2 border-2">
-                <figure class="px-10 pt-10">
-                    <img src="/images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                    <h2 class="card-title">12.90$ - 18.85$</h2>
-                    <p>Red Dragon</p>
-                    <div class="rating">
-                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
-                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                      </div>
-                </div>
-            </div>
-            <div class="card bg-base-100 m-2 border-2">
-                <figure class="px-10 pt-10">
-                    <img src="/images/fruit9.png" alt="Banana" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                    <h2 class="card-title">12.90$ - 18.85$</h2>
-                    <p>Banana</p>
-                    <div class="rating">
-                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
-                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" checked />
-                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
-                      </div>
-                </div>
-            </div>
-            <div class="">
-                <button class="btn">Shop All</button>
+            <div class=" flex justify-center">
+                <button class="btn-md rounded-lg bg-pink-500 text-2xl text-fuchsia-50">Shop All</button>
             </div>
         </section>
 
@@ -261,11 +267,13 @@
                                 <img src="./images/member2.png" alt="">
                                 <h1>Awlad Hossain</h1>
                                 <p>Fruits Expert</p>
-                            </div><div>
+                            </div>
+                            <div>
                                 <img src="./images/member3.png" alt="">
                                 <h1>Awlad Hossain</h1>
                                 <p>Fruits Expert</p>
-                            </div><div>
+                            </div>
+                            <div>
                                 <img src="./images/member4.png" alt="">
                                 <h1>Awlad Hossain</h1>
                                 <p>Fruits Expert</p>
@@ -277,43 +285,109 @@
 
         </section>
 
+        <!-- why choose section -->
+        <section>
+            <div class=" grid grid-flow-row gap-4 text-center p-12">
+                <h1 class="font-extrabold text-5xl ">Why Choose Us</h1>
+                <p class="font-normal text-xl text-black">Contrary to popular belief, is not simply random text. It has
+                    roots in a
+                    piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class=" flex justify-around">
+                <div class=" grid grid-flow-row ">
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <h3 class="font-bold text-lg">Dedicated Team</h3>
+                            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.
+                            </p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <h3 class="font-bold text-lg">Fresh is Best</h3>
+                            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.
+                            </p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <h3 class="font-bold text-lg">Gift Certificates</h3>
+                            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <div class=" grid grid-flow-row">
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <h3 class="font-bold text-lg">Integrated Supplier</h3>
+                            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.
+                            </p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <h3 class="font-bold text-lg">Sustainable Practice</h3>
+                            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.
+                            </p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <h3 class="font-bold text-lg">The Benefits Only</h3>
+                            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.
+                            </p>
+                        </li>
+                    </ul>
 
+
+                </div>
+            </div>
+
+
+        </section>
 
     </main>
 
-
-
-
     <!-- footer section -->
 
-         <footer class="footer footer-center p-10 bg-neutral-900 text-primary-content">
+    <footer class="footer footer-center p-10 bg-neutral-900 text-primary-content">
 
-            <div class="grid grid-flow-col gap-5    ">
-                <a><img src="./images/logo.png" alt=""></a>
-                <h1 class="text-4xl font-bold">Fruit Burst</h1>
-                <!-- &copy; Copyrights Reserved to AwladHossain -->
-            </div> 
-            <div class="font-semibold text-base">
-                <ul class="grid grid-flow-col gap-10">
-                    <li>Home</li>
-                    <li>About Us</li>
-                    <li>Shop</li>
-                    <li>All Fruits</li>
-                    <li>Support</li>
-                    <li>My Account</li>
-                </ul>     
+        <div class="grid grid-flow-col gap-5    ">
+            <a><img src="./images/logo.png" alt=""></a>
+            <h1 class="text-4xl font-bold">Fruit Burst</h1>
+            <!-- &copy; Copyrights Reserved to AwladHossain -->
+        </div>
+        <div class="font-semibold text-base">
+            <ul class="grid grid-flow-col gap-10">
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Shop</li>
+                <li>All Fruits</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+        </div>
+        <div>
+            <div class="grid grid-flow-col gap-6">
+                <a><img src="./images/twitter 1.svg" alt=""></a>
+                <a><img src="./images/facebook 1.svg" alt=""></a>
+                <a><img src="./images/youtube1.svg" alt=""></a>
+                <a><img src="./images/linkedin 1.svg" alt=""></a>
+                <a><img src="./images/instagram 1.svg" alt=""></a>
+                <a><img src="./images/apple 1.svg" alt=""></a>
             </div>
-            <div>
-              <div class="grid grid-flow-col gap-6">
-                <a><img src="./images/twitter 1.svg" alt=""></a> 
-                <a><img src="./images/facebook 1.svg" alt=""></a> 
-                <a><img src="./images/youtube1.svg" alt=""></a> 
-                <a><img src="./images/linkedin 1.svg" alt=""></a> 
-                <a><img src="./images/instagram 1.svg" alt=""></a> 
-                <a><img src="./images/apple 1.svg" alt=""></a> 
-              </div>
-            </div>
-          
+        </div>
+
     </footer>
 
 </body>
