responsibe web done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     <!-- header section -->
-    <header class="">
+    <header class="p-2">
         <div class="navbar rounded-full	 lg:bg-red-500">
             <div>
                 <div class="dropdown">
