--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                 <img src="./images/logo.png" alt="">
                 <h1 class="navbar-center">Fruit Burst</h1>
             </div>
-            <div class="navbar-end hidden lg:flex ">
-                <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto rounded-full " />
+            <div class="navbar-end  hidden lg:flex ">
+                <input type="text" placeholder="Search Here"
+                    class="input input-bordered w-24 md:w-auto rounded-full " />
             </div>
         </div>
     </header>
@@ -63,51 +64,78 @@
     <!-- main section  -->
     <main class="p-5">
         <!-- banner section -->
-
+        <section class="relative">
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="/images/banner1.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide4" class="btn btn-circle">❮</a> 
-                <a href="#slide2" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide2" class="carousel-item relative w-full">
-              <img src="/images/banner2.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle">❮</a> 
-                <a href="#slide3" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide3" class="carousel-item relative w-full">
-              <img src="/images/banner3.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle">❮</a> 
-                <a href="#slide4" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide4" class="carousel-item relative w-full">
-              <img src="/images/banner4.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
-                <a href="#slide1" class="btn btn-circle">❯</a>
-              </div>
+                <div class="absolute text-center lg:top-80 lg:left-1/3 ">
+                    <h1 class="text-fuchsia-50 text-4xl font-extrabold ">Exotic tastes at your doorstep</h1>
+                    <p class="text-fuchsia-50 text-xl">We supply highly quality organic products</p>
+                    <button class="rounded-md bg-pink-500 text-xl lg:w-40 lg:h-14 text-fuchsia-50" >Shop Now</button>
+                </div>
+                <img src="./images/banner1.png" class="w-full" alt="">
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
             </div>
-          </div>
-        
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="absolute text-center lg:top-80 lg:left-1/3 ">
+                    <h1 class="text-fuchsia-50 text-4xl font-extrabold ">Exotic tastes at your doorstep</h1>
+                    <p class="text-fuchsia-50 text-xl">We supply highly quality organic products</p>
+                    <button class="rounded-md bg-pink-500 text-xl lg:w-40 lg:h-14 text-fuchsia-50" >Shop Now</button>
+                </div>
+                <img src="/images/banner2.png" class="w-full" />
+                <div class="absolute text-center lg:top-80 lg:left-1/3 ">
+                    <h1 class="text-fuchsia-50 text-4xl font-extrabold ">Exotic tastes at your doorstep</h1>
+                    <p class="text-fuchsia-50 text-xl">We supply highly quality organic products</p>
+                    <button class="rounded-md bg-pink-500 text-xl lg:w-40 lg:h-14 text-fuchsia-50" >Shop Now</button>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="absolute text-center lg:top-80 lg:left-1/3 ">
+                    <h1 class="text-fuchsia-50 text-4xl font-extrabold ">Exotic tastes at your doorstep</h1>
+                    <p class="text-fuchsia-50 text-xl">We supply highly quality organic products</p>
+                    <button class="rounded-md bg-pink-500 text-xl lg:w-40 lg:h-14 text-fuchsia-50" >Shop Now</button>
+                </div>
+                <img src="/images/banner3.png" class="w-full" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="absolute text-center lg:top-80 lg:left-1/3 ">
+                    <h1 class="text-fuchsia-50 text-4xl font-extrabold ">Exotic tastes at your doorstep</h1>
+                    <p class="text-fuchsia-50 text-xl">We supply highly quality organic products</p>
+                    <button class="rounded-md bg-pink-500 text-xl lg:w-40 lg:h-14 text-fuchsia-50" >Shop Now</button>
+                </div>
+                <img src="/images/banner4.png" class="w-full" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
         <!-- countdown -->
-        <section class="flex flex-wrap justify-center pt-10 items-center">
+        <section class="flex flex-wrap justify-around pt-10 items-center">
             <div>
                 <h1 class="font-extrabold text-5xl">
                     Deal of the day
                 </h1>
-                <p class="text-lg p-3">Contrary to popular belief, is not simply random text. It has roots in a
-                    piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="text-lg font-medium p-3">Contrary to popular belief, is not simply random text. It has roots
+                    in a
+                    piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
 
-            <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+            <div class="grid grid-flow-col gap-5 text-center  font-semibold auto-cols-max">
                 <div class="flex flex-col">
                     <span class="countdown text-5xl">
                         <span style="--value:15;"></span>
@@ -152,7 +180,21 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <p>Details</p>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="text-pink-400" onclick="my_modal_1.showModal()"> Details</button>
+                        <dialog id="my_modal_1" class="modal">
+                            <form method="dialog" class="modal-box">
+                                <img src="./images/fruit6.png" class="mx-auto" alt="">
+                                <h3 class="font-bold text-lg">Apples!</h3>
+                                <p class="py-4">Apples May Lower High Cholesterol and Blood Pressure.</p>
+                                <p class="py-4">The Antioxidants in Apples May Play a Role in Cancer Prevention.</p>
+                                <button class="btn btn-outline btn-secondary">Buy Now</button>
+                                <button class="btn btn-outline btn-secondary">Close</button>
+                                <div class="modal-action">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
                 <div class="card bg-base-100 m-2 border-2 ">
@@ -169,7 +211,19 @@
                             <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
                             <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <p>Details</p>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="text-pink-400" onclick="my_modal_2.showModal()">Details</button>
+                        <dialog id="my_modal_2" class="modal">
+                            <form method="dialog" class="modal-box">
+                                <h3 class="font-bold text-lg">Orange</h3>
+                                <p class="py-4">Protects your cells from damage.</p>
+                                <p class="py-4">Boosts your immune system, your body's defense against germs</p>
+                                <div class="modal-action">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn">Close</button>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
                 <div class="card bg-base-100 m-2 border-2 ">
@@ -186,7 +240,19 @@
                             <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <p>Details</p>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="text-pink-400" onclick="my_modal_3.showModal()">Details</button>
+                        <dialog id="my_modal_3" class="modal">
+                            <form method="dialog" class="modal-box">
+                                <h3 class="font-bold text-lg">Red Dragon</h3>
+                                <p class="py-4">Reduces Risks of Cancer</p>
+                                <p class="py-4"> Good During Pregnancy</p>
+                                <div class="modal-action">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn">Close</button>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
                 <div class="card bg-base-100 m-2 border-2">
@@ -203,7 +269,19 @@
                             <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" checked />
                             <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <p>Details</p>
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="text-pink-400" onclick="my_modal_4.showModal()">Details</button>
+                        <dialog id="my_modal_4" class="modal">
+                            <form method="dialog" class="modal-box">
+                                <h3 class="font-bold text-lg">Banana</h3>
+                                <p class="py-4">May improve blood sugar levels</p>
+                                <p class="py-4">Full of antioxidants</p>
+                                <div class="modal-action">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn">Close</button>
+                                </div>
+                            </form>
+                        </dialog>
                     </div>
                 </div>
             </div>
@@ -226,20 +304,20 @@
                 <div class=" flex flex-col lg:flex-row py-8 justify-center text-center gap-12 ">
                     <div class="text-white">
                         <img class="mx-auto" src="./images/member1.png" alt="">
-                        <h1  class="text-xl font-bold">Awlad Hossain</h1>
+                        <h1 class="text-xl font-bold">Awlad Hossain</h1>
                         <p class="text-lg font-semibold">Fruits Expert</p>
                     </div>
                     <div class="text-white">
                         <img class="mx-auto" src="./images/member2.png" alt="">
-                        <h1  class="text-xl font-bold">Awlad Hossain</h1>
+                        <h1 class="text-xl font-bold">Awlad Hossain</h1>
                         <p class="text-lg font-semibold">Fruits Expert</p>
                     </div>
-                    <div  class="text-white">
+                    <div class="text-white">
                         <img class="mx-auto" src="./images/member3.png" alt="">
-                        <h1  class="text-xl font-bold">Awlad Hossain</h1>
+                        <h1 class="text-xl font-bold">Awlad Hossain</h1>
                         <p class="text-lg font-semibold">Fruits Expert</p>
                     </div>
-                    <div  class="text-white">
+                    <div class="text-white">
                         <img class="mx-auto" src="./images/member4.png" alt="">
                         <h1 class="text-xl font-bold">Awlad Hossain</h1>
                         <p class="text-lg font-semibold">Fruits Expert</p>
