--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="flex flex-wrap justify-center py-12 ">
                 <div class="card bg-base-100 m-2 border-2">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit6.png" alt="Apples" class="rounded-sm" />
+                        <img src="./images/fruit6.png" alt="Apples" class="rounded-sm" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="card bg-base-100 m-2 border-2 ">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit7.png" alt="Orange" class="rounded-xl" />
+                        <img src="./images/fruit7.png" alt="Orange" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -243,12 +243,14 @@
                         <button class="text-pink-400" onclick="my_modal_2.showModal()">Details</button>
                         <dialog id="my_modal_2" class="modal">
                             <form method="dialog" class="modal-box">
+                                <img src="./images/fruit7.png" class="mx-auto" alt="">
                                 <h3 class="font-bold text-lg">Orange</h3>
                                 <p class="py-4">Protects your cells from damage.</p>
                                 <p class="py-4">Boosts your immune system, your body's defense against germs</p>
+                                <button class="btn btn-outline btn-secondary">Buy Now</button>
+                                <button class="btn btn-outline btn-secondary">Close</button>
                                 <div class="modal-action">
                                     <!-- if there is a button in form, it will close the modal -->
-                                    <button class="btn">Close</button>
                                 </div>
                             </form>
                         </dialog>
@@ -256,7 +258,7 @@
                 </div>
                 <div class="card bg-base-100 m-2 border-2 ">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                        <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -272,12 +274,14 @@
                         <button class="text-pink-400" onclick="my_modal_3.showModal()">Details</button>
                         <dialog id="my_modal_3" class="modal">
                             <form method="dialog" class="modal-box">
+                                <img src="./images/fruit8.png" class="mx-auto" alt="">
                                 <h3 class="font-bold text-lg">Red Dragon</h3>
                                 <p class="py-4">Reduces Risks of Cancer</p>
                                 <p class="py-4"> Good During Pregnancy</p>
+                                <button class="btn btn-outline btn-secondary">Buy Now</button>
+                                <button class="btn btn-outline btn-secondary">Close</button>
                                 <div class="modal-action">
                                     <!-- if there is a button in form, it will close the modal -->
-                                    <button class="btn">Close</button>
                                 </div>
                             </form>
                         </dialog>
@@ -285,7 +289,7 @@
                 </div>
                 <div class="card bg-base-100 m-2 border-2">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit9.png" alt="Banana" class="rounded-xl" />
+                        <img src="./images/fruit9.png" alt="Banana" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -301,12 +305,14 @@
                         <button class="text-pink-400" onclick="my_modal_4.showModal()">Details</button>
                         <dialog id="my_modal_4" class="modal">
                             <form method="dialog" class="modal-box">
+                                <img src="./images/fruit9.png" class="mx-auto" alt="">
                                 <h3 class="font-bold text-lg">Banana</h3>
                                 <p class="py-4">May improve blood sugar levels</p>
                                 <p class="py-4">Full of antioxidants</p>
+                                <button class="btn btn-outline btn-secondary">Buy Now</button>
+                                <button class="btn btn-outline btn-secondary">Close</button>
                                 <div class="modal-action">
                                     <!-- if there is a button in form, it will close the modal -->
-                                    <button class="btn">Close</button>
                                 </div>
                             </form>
                         </dialog>
