--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="navbar-start hidden lg:flex">
-                <ul class="menu menu-horizontal px-1 font-semibold text-base text-white">
+                <ul class="menu menu-horizontal px-1 font-semibold text-base lg:text-white">
                     <li><a>Home</a></li>
                     <li tabindex="0">
                         <summary>About Us</summary>
@@ -54,7 +54,7 @@
             </div>
             <div class="gap-10">
                 <img src="./images/logo.png" alt="">
-                <h1 class="navbar-center text-white text-2xl font-bold">Fruit Burst</h1>
+                <h1 class="navbar-center lg:text-white text-2xl font-bold">Fruit Burst</h1>
             </div>
             <div class="navbar-end  hidden lg:flex ">
                 <input type="text" placeholder="Search Here"
